# prompthub

./: .env.example  .gitignore  CLAUDE.md  FIX_REPORT.md  IMAGE_GEN_REPORT.md  Makefile  PRD.md  VERIFICATION_REPORT.md  create_image_gen_project.py  docker-compose.yml  fix_prompts.py  merge_audio_projects.py  prompt-hub-architecture.jsx  prompthub-system-design.md  verify_e2e.py
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 415a03a80544_initial_schema.py  4d3806db0011_add_deleted_at_to_prompts.py
backend/app/: config.py  database.py  main.py
backend/app/api/: ai.py  projects.py  prompts.py  router.py  scenes.py  shared.py  versions.py
backend/app/core/: auth.py  enums.py  exceptions.py  pagination.py  response.py
backend/app/models/: __init__.py  call_log.py  project.py  prompt.py  prompt_ref.py  scene.py  user.py  version.py
backend/app/schemas/: ai.py  project.py  prompt.py  scene.py  shared.py  version.py
backend/app/services/: ai_service.py  dependency_resolver.py  llm_client.py  project_service.py  prompt_service.py  ref_service.py  scene_engine.py  scene_service.py  template_engine.py  version_service.py
backend/scripts/: check_architecture.py  seed_data.py
sdk/: pyproject.toml
sdk/examples/: ai_optimization.py  audio_summary.py  basic_usage.py  meeting_image_gen.py
sdk/prompthub/: __init__.py  _base.py  _cache.py  _client.py  _pagination.py  exceptions.py  types.py
sdk/tests/: conftest.py  test_ai.py  test_client.py  test_projects.py  test_prompts.py  test_scenes.py  test_shared.py
(+24 files in other folders)
