[project]
name = "prompthub-sdk"
version = "0.1.0"
description = "Python SDK for PromptHub prompt management platform"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27,<1", "pydantic>=2.0,<3"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prompthub"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
